--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+html,
 body {
-    min-height: 100vh;
-    background: plum;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Karla', sans-serif;
 }
