--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0px 4px 16px rgba(1, 28, 64, 0.2);
+  background-color: $third;;
 }
 
 .wrapper {
@@ -58,4 +59,8 @@
       opacity: 1;
     }
   }
+}
+
+.activeLink {
+  background-color: red;
 }
